[jps lib tracker] fix "java.nio.file.FileSystemAlreadyExistsException      	at jdk.zipfs/jdk.nio.zipfs.ZipFileSystemProvider.newFileSystem(ZipFileSystemProvider.java:104)"
GitOrigin-RevId: 6d7fbc9cc85ad748508ba03a24dcc4839344e9c4